config/grgconseils-ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-grgconseils-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  tls:
    - hosts:
        - www.grgconseils.ca
        - grgconseils.ca
      secretName: grgconseils-tls
  rules:
    - host: www.grgconseils.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grgconseils-resume-fe-svc
                port:
                  number: 80  
    - host: grgconseils.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grgconseils-resume-fe-svc
                port:
                  number: 80
